more dark mode issues fixed

--- a/frontend/src/app/pages/home/home.page.scss
+++ b/frontend/src/app/pages/home/home.page.scss
@@ -2,7 +2,3 @@
   --placeholder-opacity: 100%;
   --color: white;
 }
-ion-card{
-  border-radius: 5px;
-  background: rgba(255,255,255,0.5);
-}
