--- a/frontend/src/app/pages/post-detail/post-detail.page.scss
+++ b/frontend/src/app/pages/post-detail/post-detail.page.scss
@@ -10,3 +10,6 @@ ion-card-content{
   padding-left: 10px;
   padding-bottom: 0;
 }
+#mail{
+  color: var(--ion-color-primary-contrast);
+}
